force-app/main/default/objects/TVA_CO__Email_Message__c/TVA_CO__Email_Message__c.object-meta.xml
<CustomObject>
    <label>Email Message</label>
    <nameField>
        <label>Email Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>