force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Amazon_Message_History__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Amazon_Message_History__c</fullName>
    <label>Amazon Message History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>