force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Attach_Files_Status__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Attach_Files_Status__c</fullName>
    <label>Attach Files Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>