force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Bounce_Code__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Bounce_Code__c</fullName>
    <description>To Capture the SMTP bounce codes</description>
    <label>Bounce Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>