force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Bounce_Reason__c</fullName>
    <description>To Capture the bounce reason</description>
    <label>Bounce Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>