force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Bounce_Subtype__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Bounce_Subtype__c</fullName>
    <label>Bounce Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>