force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__City__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>