force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Complaint_FeedbackType__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Complaint_FeedbackType__c</fullName>
    <label>Complaint FeedbackType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>