force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Contact__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>