force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Date_Bounced__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Date_Bounced__c</fullName>
    <label>Date Bounced</label>
    <type>DateTime</type>
</CustomField>