force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Date_Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Date_Last_Opened__c</fullName>
    <label>Date Last Opened</label>
    <type>DateTime</type>
</CustomField>