force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Date_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Date_Unsubscribed__c</fullName>
    <label>Date Unsubscribed</label>
    <type>DateTime</type>
</CustomField>