force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Email_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Email_Message_ID__c</fullName>
    <externalId>true</externalId>
    <label>Email Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>