force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>