force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Event_Response__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Event_Response__c</fullName>
    <label>Event Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>