force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Formula__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Formula__c</fullName>
    <formula>text(today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula</label>
    <type>Text</type>
</CustomField>