force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__From__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__From__c</fullName>
    <label>From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>