force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__From_Email__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__From_Email__c</fullName>
    <label>From Email</label>
    <type>Email</type>
</CustomField>