force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Lead__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>