force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Others__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Others</label>
    <type>Checkbox</type>
</CustomField>