force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Parent_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Parent_Record_ID__c</fullName>
    <label>Parent Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>