force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Reply_To__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Reply_To__c</fullName>
    <label>Reply To</label>
    <type>Email</type>
</CustomField>