force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Request_ID__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Request_ID__c</fullName>
    <label>Request ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>