force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>