force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Times_Opened__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Times_Opened__c</fullName>
    <label>Times Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>