force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Unique_Clicks__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Unique_Clicks__c</fullName>
    <label># Unique Clicks</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>