force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Unsubscribe_Update_Failed__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Unsubscribe_Update_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribe Update Failed</label>
    <type>Checkbox</type>
</CustomField>