force-app/main/default/objects/TVA_CO__Email_Message__c/fields/TVA_CO__Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Unsubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>